--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
     <!-- Import Fonts from fonts.googleapis.com; Gets rid of the requirement to include WOFF/WOFF2 files for every combination of font family, weight and style we support -->
     <style>
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>License to Succeed</title>
   </head>
 
   <body>
